--- a/proyecto1/proyecto1/plantillas/familiar.html
+++ b/proyecto1/proyecto1/plantillas/familiar.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Mi primer titulo</h1>
-    <br>
-    <p style="color:red">Mi primera pagina web</p>
+    <p>El nombre del primer familiar es {{name1}}, tiene {{age1}} años, nació el {{birth1}}.</p>
+    <p>El nombre del segundo familiar es {{name2}}, tiene {{age2}} años, nació el {{birth2}}.</p>
+    <p>El nombre del tercer familiar es {{name3}}, tiene {{age3}} años, nació el {{birth3}}.</p>
 </body>
-</html> 
+</html>
